<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/player_id_ET"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="-308dp"
        android:layout_marginBottom="304dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bangla_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#6F8285"
            android:text="@string/bangla_button">

        </Button>

        <Button
            android:id="@+id/english_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:backgroundTint="#6F8285"
            android:text="@string/english_button">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_image_button"
        android:layout_width="185dp"
        android:layout_height="245dp"
        android:layout_alignEnd="@id/player_id_ET"
        android:layout_marginStart="15dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="-278dp"
        android:layout_marginBottom="304dp"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:contentDescription="@string/login"
            android:cropToPadding="true"
            android:src="@drawable/logo">

        </ImageButton>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#118C16"
            android:text="@string/quick_load"
            android:textAllCaps="false">

        </Button>


    </LinearLayout>

    <EditText
        android:id="@+id/player_id_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/enter_player_id"
        android:inputType="number"
        android:padding="20dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:autofillHints="@string/enter_player_id">

    </EditText>

    <EditText
        android:id="@+id/password_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_id_ET"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/enter_password"
        android:padding="20dp"
        android:textSize="16sp"
        android:autofillHints="@string/enter_password"
        android:inputType="numberPassword">

    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_ET"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/roboto_regular"

        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold">

    </Button>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="320dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingStart="35dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry">

        </TextView>

        <TextView
            android:id="@+id/registerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingEnd="25dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="320dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingStart="30dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry">

        </TextView>

        <TextView
            android:id="@+id/resetTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout2"
        android:layout_marginStart="30dp"
        android:text="@string/helpline"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"

        android:autofillHints="call for help">
    </EditText>


</RelativeLayout>