<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linear_layout_button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/enter_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="-308dp"
        android:layout_marginBottom="304dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bangla_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#6F8285"
            android:text="@string/bangla_button"
            style="?android:attr/buttonBarButtonStyle">

        </Button>

        <Button
            android:id="@+id/english_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:backgroundTint="#6F8285"
            android:text="@string/english_button"
            style="?android:attr/buttonBarButtonStyle">

        </Button>

    </LinearLayout>


    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:padding="12dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:autofillHints="@string/enter_player_id">

    </EditText>

    <EditText
        android:id="@+id/enter_player_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/enter_player_id"
        android:padding="12dp"
        android:textSize="16sp"
        android:autofillHints="@string/enter_password"
        android:inputType="numberPassword">

    </EditText>
    <EditText
        android:id="@+id/enter_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_player_id"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:padding="12dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:autofillHints="@string/enter_player_id">

    </EditText>

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_mobile_number"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/enter_password"
        android:padding="12dp"
        android:textSize="16sp"
        android:autofillHints="@string/enter_password"
        android:inputType="numberPassword">

    </EditText>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_password"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/roboto_regular"

        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold">

    </Button>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_button"
        android:layout_marginTop="5dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="350dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="30dp"
            android:text="@string/have_an_account"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry">

        </TextView>

        <TextView
            android:id="@+id/resetTV"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_regular"
            android:maxLines="1"

            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_image_button"
        android:layout_width="200dp"
        android:layout_height="199dp"
        android:layout_alignEnd="@id/enter_player_id"
        android:layout_marginStart="15dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="-293dp"
        android:layout_marginBottom="304dp"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:contentDescription="@string/login"
            android:cropToPadding="true"
            android:src="@drawable/logo">

        </ImageButton>


    </LinearLayout>


</RelativeLayout>